--- a/code/Roiger Intern Project Preliminary Code.Rmd
+++ b/code/Roiger Intern Project Preliminary Code.Rmd
@@ -13,14 +13,15 @@ library(tidyverse)
 library(mosaic)
 library(car)
 library(plyr)
-library(zoo)
-library(lubridate)
+library(ggplot2)
+library(gridExtra)
+library(scales)
 
 
-trap = read.csv('N:/Science/FSU/Intern Projects/2107_CharlotteRoiger/mos_trapping_in.csv')
-sort = read.csv('N:/Science/FSU/Intern Projects/2107_CharlotteRoiger/mos_sorting_in.csv')
-id = read.csv('N:/Science/FSU/Intern Projects/2107_CharlotteRoiger/mos_identification_in.csv')
-pathogen = read.csv('N:/Science/FSU/Intern Projects/2107_CharlotteRoiger/mos_pathogenresults_in.csv')
+trap = read.csv('N:/Science/FSU/Intern Projects/2017_CharlotteRoiger/mos_trapping_in.csv')
+sort = read.csv('N:/Science/FSU/Intern Projects/2017_CharlotteRoiger/mos_sorting_in.csv')
+id = read.csv('N:/Science/FSU/Intern Projects/2017_CharlotteRoiger/mos_identification_in.csv')
+pathogen = read.csv('N:/Science/FSU/Intern Projects/2017_CharlotteRoiger/mos_pathogenresults_in.csv')
 taxonomy = read.csv("~/mosquito-intern/resources/mosquito_taxonomy.csv")
 precip.df = read.csv('~/mosquito-intern/resources/precipitation.csv')
 temp.df = read.csv("~/mosquito-intern/resources/temperature_maximum.csv")
@@ -85,7 +86,7 @@ id$Year<-substr(id$collectDate,1,4)
 id$Year<-as.factor(id$Year)
 
 #Exctracting date information for id
-id$Date<-substr(id$setDate,1,10)
+id$Date<-substr(id$collectDate,1,10)
 
 #Broad Site ID variable CHANGE TO REFLECT OTHER CODE I.E UNQUEPLOTIDS
 id$siteID<-substr(id$uniquePlotIDs,1,4)
@@ -107,12 +108,6 @@ names(id)[3]<-"Precipmm"
 #Merge with domain info.
 id <- merge(x = domain.df, y = id, by.y = "siteID", by.x = "siteid", all.y = TRUE)
 id$domainid <- as.character(id$domainid)
-
-#Working on time difference offset variable
-
-#Checks to see if all obs are on the same day or two different days and nothing else
-tally(substr(id$setDate,9,10)==substr(id$collectDate,9,10))
-tally(substr(id$setDate,9,10)!=substr(id$collectDate,9,10))
 
 #Variable that contains the time difference between set and collection in hours
 id$HoursOfTrapping<-ifelse(substr(id$setDate,9,10)!=substr(id$collectDate,9,10), 24 - ((as.numeric(substr(id$setDate,15,16))/60)+(as.numeric(substr(id$setDate,12,13)))) + ((as.numeric(substr(id$collectDate,15,16))/60)+(as.numeric(substr(id$collectDate,12,13)))),((as.numeric(substr(id$collectDate[8],15,16))/60)+(as.numeric(substr(id$collectDate[8],12,13)))) - ((as.numeric(substr(id$setDate[8],15,16))/60)+(as.numeric(substr(id$setDate[8],12,13)))))
@@ -141,7 +136,7 @@ id2016<-id[id$Year==2016,]
 
 #smalle subset only containing 2014 and 2016
 idsmall<-dplyr::filter(id, id$Year %in% c(2014,2016))
-
+ 
 ```
 
 
@@ -159,26 +154,28 @@ specrich <- merge(x = uniquetrap, y = specrich, by.y = "uniquePlotIDs", by.x = "
 #Changin lat2 to a numeric
 specrich$lat2<-as.numeric(specrich$lat2)
 
-specrich$collectDate<-as.yearmon(specrich$collectDate)
+specrich[specrich$num_species>30,]
+
+# specrich$collectDate<-
 
 #Preliminary graph of latitude by species richness overall
 ggplot(specrich,aes(lat2, num_species))+
-  geom_point(aes(colour = num_species))+
+  geom_point(aes(colour = Year))+
   labs(x = "Latitude", y = "Number of Species")+
   ggtitle("Species Richness by Latitude all years")
 
 #Preliminary graph of Species Richness vs. maximum temp
 ggplot(specrich, aes(Max.TempC, num_species))+
-  geom_point(aes(colour = num_species))+
+  geom_point(aes(colour = Year))+
   labs(x = "Maximum Temperature", y = "Number of Species")+
   ggtitle("Species Richness by Maximum Temperature")
 
 #Preliminary graph of Species Richness vs. Time for 2016
-ggplot(specrich, aes(month(collectDate, label=TRUE, abbr=TRUE), 
-                value, group=factor(year(collectDate)), colour=factor(year(collectDate)))) +
-  geom_point(aes(colour = Year))+
-  labs(x = "Date of Collection", y = "Number of Species")+
-  ggtitle("Species Richness vs. Time for 2016")
+# ggplot(specrich, aes(month(collectDate, label=TRUE, abbr=TRUE), 
+#                 value, group=factor(year(collectDate)), colour=factor(year(collectDate)))) +
+#   geom_point(aes(colour = Year))+
+#   labs(x = "Date of Collection", y = "Number of Species")+
+#   ggtitle("Species Richness vs. Time for 2016")
 
 #Challenge Problem Make scatterplot of Species Richness vs. Time for other year subsets
 
@@ -194,35 +191,8 @@ ggplot(specrich, aes(lat2, Max.TempC)) +
 #   labs(x = "Date of Collection", y = "Maximum Temperature")+
 #   ggtitle("Maximum Temperature in Celsius vs. Date of Collection")
 
-#From these graphs establish some sort of relationship between variables use to build models
-
-#Do I talk about model building/ model selection or jump immediately to a model
-
-#Layout assumptions for linear modeling
-#LINE acronym
-
-mod1 <- lm(num_species ~ lat2, data = specrich)
-summary(mod1)
-  
-mod2 <- lm(num_species ~ lat2 + Year, data = specrich)
-summary(mod2)
-
-mod3 <- lm(num_species ~ lat2 + Max.TempC + Year, data = specrich)
-summary(mod3)
-vif(mod3)
-
-#Deconstruction of appropriateness of linear model 
-#Linearity: Examining the scatterplot of species richness vs. lat does not appear to be linear
-#Independence: Sampling could be geographically related because of environments at plots, sites, and domains
-#Normality: Normal Q-Q plot
-#Equal Variance: Residuals Plot
-
-plot(mod3)
-
-#Conclusion: these relationships could exist but a different model is necessary
 
 ```
-
 
 
 ###Julian Date of first occurence versus lat
@@ -238,7 +208,7 @@ prop.table(table(id$Year,id$sex),1)
 table(id$Year,id$scientificName=="Aedes albopictus")
 
 #Number of times each species identified in id df
-tally(id$scientificName)
+# tally(id$scientificName)
 
 #Tracking number of sites where Ae. Albopictus has been identified
 albo<- id[grepl("Aedes albopictus", id$scientificName),]
@@ -291,6 +261,7 @@ table(id$Year, id$scientificName=="Culex tarsalis")
 
 #Tracking number of sites where Cu. tarsalis has been identified
 tars<- id[grepl("Culex tarsalis", id$scientificName),]
+tarssmall <- tars[tars$Year %in% c(2014,2016), ]
 tars2013<- id2013[grepl("Culex tarsalis", id2013$scientificName),]
 tars2014<- id2014[grepl("Culex tarsalis", id2014$scientificName),]
 tars2016<- id2016[grepl("Culex tarsalis", id2016$scientificName),]
@@ -306,10 +277,10 @@ tarstax<-tarstax[c(5:15,17:23),]
 tarstax.df <-data.frame("domainID"= unique(domain.df$domainid), "DomainNativeStatus"= tarstax)
 
 #Merge Cu. tarsalis taxonomy df with tars df
-tars <- merge(x = tarstax.df, y = tars, by.x = "domainID", by.y = "domainid")
+tarssmall <- merge(x = tarstax.df, y = tarssmall, by.x = "domainID", by.y = "domainid")
 
-tars$lat2<- as.numeric(tars$lat2)
-tars$lon2<- as.numeric(tars$lon2)
+tarssmall$lat2<- as.numeric(tarssmall$lat2)
+tarssmall$lon2<- as.numeric(tarssmall$lon2)
 #number of sites of appearance
 length(unique(tars$uniquePlotIDs)) #160
 length(unique(tars2013$uniquePlotIDs)) #35
@@ -328,11 +299,30 @@ sum(complete.cases(tars2014$newindividualCount))/sum(complete.cases(id2014$newin
 sum(complete.cases(tars2016$newindividualCount))/sum(complete.cases(id2016$newindividualCount))
 
 #Subsets containing only the rows where Cu. tarsalis was first sampled in each geographic subdivision
-tars.firstdomain <- tars[match(unique(tars$domainID), tars$domainID),]
-tars.firstsite <- tars[match(unique(tars$siteid), tars$siteid),]
-tars.firstplot <- tars[match(unique(tars$uniquePlotIDs), tars$uniquePlotIDs),]
+tars.firstdomain <- tarssmall[match(unique(tarssmall$domainID), tarssmall$domainID),]
+tars.firstsite <- tarssmall[match(unique(tarssmall$siteid), tarssmall$siteid),]
+tars.firstplot <- tarssmall[match(unique(tarssmall$uniquePlotIDs), tarssmall$uniquePlotIDs),]
 
 # Visualizations for domains, sites and plots where cx. tarsalis is present
+tars2016$date<-as.Date(tars2016$date)
+tars2014$date<-as.Date(tars2014$date)
+
+plot2016 <-ggplot(tars2016, aes(as.numeric(lat2), as.Date(date)))+
+  geom_point(color = "darkblue")+
+  labs(x = "Latitude", y = "Date")+
+  scale_x_continuous(limits = c(30,65))+
+  scale_y_date(labels = date_format("%m-%Y"), date_breaks = "1 month")+
+  ggtitle("Date versus Latitude for 2016")
+plot2014 <-ggplot(tars2014, aes(as.numeric(lat2), as.Date(date)))+
+  geom_point(color = "pink")+
+  scale_x_continuous(limits = c(30,65))+
+  scale_y_date(labels = date_format("%m-%Y"), date_breaks = "1 month", limits = as.Date(c("2014-05-01","2014-11-01")))+
+  labs(x = "Latitude", y = "Date")+
+  ggtitle("Date versus Latitude for 2014")
+
+
+
+grid.arrange(plot2014, plot2016)
 
 # q + geom_point(data = tars.firstdomain, aes(lon2,lat2), color = "blue")
 
